[gd_scene load_steps=8 format=3 uid="uid://bvd7n6g5fgh7g"]

[ext_resource type="Script" path="res://src/cenarios/cenarios.gd" id="1_gjk6s"]
[ext_resource type="PackedScene" uid="uid://dh8kjt6llupf" path="res://src/cenarios/cenario_1.tscn" id="1_icm4x"]
[ext_resource type="Resource" uid="uid://wnhu2uvyxva6" path="res://src/cenarios/mapas/map_1.tres" id="2_ibf27"]
[ext_resource type="PackedScene" uid="uid://bo7ayfv787ff7" path="res://src/cenarios/cenario_2.tscn" id="3_mlpb1"]
[ext_resource type="PackedScene" uid="uid://bj1xs80ra062g" path="res://src/cenarios/cenario_3.tscn" id="4_g5ica"]
[ext_resource type="PackedScene" uid="uid://biqsusds616up" path="res://src/timer/timer.tscn" id="6_iijnq"]
[ext_resource type="PackedScene" uid="uid://8tql3gq5omto" path="res://src/contador/contador.tscn" id="7_t68xr"]

[node name="Cenarios" type="Node2D" node_paths=PackedStringArray("cenarios", "contador_erros") groups=["cenarios"]]
script = ExtResource("1_gjk6s")
mapa = ExtResource("2_ibf27")
cenarios = [NodePath("Cenario1"), NodePath("Cenario2"), NodePath("Cenario3")]
contador_erros = NodePath("Camera2D/contador_erros")

[node name="Cenario1" parent="." instance=ExtResource("1_icm4x")]

[node name="Cenario2" parent="." instance=ExtResource("3_mlpb1")]

[node name="Cenario3" parent="." instance=ExtResource("4_g5ica")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Timer" parent="Camera2D" instance=ExtResource("6_iijnq")]
offset_left = 1005.0
offset_top = 149.0
offset_right = 1005.0
offset_bottom = 149.0
scale = Vector2(0.4, 0.4)

[node name="contador_erros" type="Label" parent="Camera2D"]
offset_left = 13.0
offset_top = 12.0
offset_right = 99.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 25
text = "Erros: 0/3"

[node name="Contador" parent="Camera2D" node_paths=PackedStringArray("cenarios") instance=ExtResource("7_t68xr")]
cenarios = NodePath("../..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BotaoEsquerda" type="Button" parent="UI"]
offset_left = 1022.0
offset_top = 279.0
offset_right = 1119.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 100
text = "->"

[node name="BotaoDireita" type="Button" parent="UI"]
offset_left = 49.0
offset_top = 271.0
offset_right = 146.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 100
text = "<-"

[connection signal="pressed" from="UI/BotaoEsquerda" to="." method="apertou_botao_esquerda"]
[connection signal="pressed" from="UI/BotaoDireita" to="." method="apertou_botao_direita"]
